Implemented modules for the Community feature
